--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   font-family: Helvetica, Arial, sans-serif;
+  background-color: rgb(234, 234, 234);
 }
 
 body {
@@ -7,31 +8,56 @@ body {
 }
 
 input {
-  color: grey;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid rgb(97, 32, 158);
+  color: black;
   font-size: 1.2rem;
+  outline: none;
+  padding: 10px 15px;
   width: 100%;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 3rem;
+  margin-bottom: 5px;
 }
 
 .card-grid {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card {
   align-content: center;
-  border: 1px solid grey;
-  border-radius: 6px;
-  margin-bottom: 10px;
-  margin-right: 10px;
+  align-items: center;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
+  display: flex;
+  flex-direction: column;
+  height: 0%;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-right: 20px;
   overflow: hidden;
 }
 
 .card p {
-  padding: 5px;
+  background-color: white;
+  flex: 1;
+  font-size: 1.5rem;
+  margin-top: 5px;
+  padding: 5px 20px 0px 20px;
   text-align: center;
 }
 
 .card img {
-  max-height: 170px;
+  width: 100%;
 }
